--- a/src/translations/ca.json
+++ b/src/translations/ca.json
@@ -2,13 +2,9 @@
   "home": {
     "pathUrl": "Inici",
     "textHeader": "Pedagogia en moviment",
-    "titlePattner": "La teva millor garantia, els nostres clients",
-    "titleContat": "Contacte amb nosaltres",
-    "cite": "Tots els adults van ser alguna vegada nens… però només uns pocs ho recorden.",
-    "auhtorCite": "El Petit princep",
-    "contactP": "Estem al centre de Barcelona,",
-    "contactP2": "al carrer Gran Via de de les Corts Catalanes 672,",
-    "contactP3": "entre Passeig de Gràcia i Passeig de Sant Joan."
+    "paragraf1": "El joc és una activitat molt seriosa per als més petits de la casa: de forma lliure, espontània",
+    "paragraf2": "o dinamitzar pels adults, al menjador de casa o al mig del medi natural, etc. Amb el joc ens",
+    "paragraf3": "divertim i aprenem junts, peró quins són els secrets que s'amaguen darrere de cada joc"
   },
   "about": {
     "pathUrl": "Sobre jo"
