--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -2,11 +2,9 @@
   "home": {
     "pathUrl": "Inicio",
     "textHeader": "Pedagogia en movimiento",
-    "titlePattner": "Tu mejor garantia, nuestros clientes",
-    "titleContat": "Contacta con nosotros",
-    "cite": "Todos los adultos fueron alguna vez niños… pero sólo unos pocos lo recuerdan.",
-    "auhtorCite": "El Pequeño príncipe",
-    "contact": "Estamos en el centro de Barcelona, en la calle Gran Via de las Cortes Catalanes 672, entre Passeig de Gràcia i Passeig de Sabt Joan"
+    "paragraf1": "El joc és una activitat molt seriosa per als més petits de la casa: de forma lliure, espontània",
+    "paragraf2": "o dinamitzar pels adults, al menjador de casa o al mig del medi natural, etc. Amb el joc ens",
+    "paragraf3": "divertim i aprenem junts, peró quins són els secrets que s'amaguen darrere de cada joc"
   },
   "about": {
     "pathUrl": "Sobre mi"
