--- a/src/translations/ca.json
+++ b/src/translations/ca.json
@@ -63,6 +63,7 @@
     }
   },
   "contact": {
-    "pathUrl": "Contacte"
+    "pathUrl": "Contacte",
+    "cite": "“Tots els adults van ser alguna vegada nens... però només uns pocs ho recorden.”"
   }
 }
