--- a/src/translations/ca.json
+++ b/src/translations/ca.json
@@ -4,7 +4,12 @@
     "textHeader": "Pedagogia en moviment",
     "cite": "“Tots els adults van ser alguna vegada nens... però només uns pocs ho recorden”",
     "titleSection": "Serveis",
-    "textSection": "El joc és una activitat molt seriosa per als més petits de la casa: de forma lliure, espontània o dinamitzat els adults, al menjador de casa o al mig del medi natural, etc. Amb el joc ens divertim I aprenem junts, però quins són els secrets que s’amaguen darrere de cada joc i joguina."
+    "textSection": "El joc és una activitat molt seriosa per als més petits de la casa: de forma lliure, espontània o dinamitzat els adults, al menjador de casa o al mig del medi natural, etc. Amb el joc ens divertim I aprenem junts, però quins són els secrets que s’amaguen darrere de cada joc i joguina.",
+    "title-services-talks": "XARRADES PER A FAMILIES",
+    "title-services-education": "FORMACIONS PROFESIONALS EDUCACIÓ",
+    "title-services-bissnes": "LA FORMACIÓ BONIFICADA PER EMPRESAS",
+    "title-1": "Vols saber més",
+    "title-2": "Alguns del's meus clients"
   },
   "about": {
     "pathUrl": "Sobre mi",
