--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -4,7 +4,12 @@
     "textHeader": "Pedagogia en movimiento",
     "cite": "“La educació no canvia el món; canvia a les persones que van a canviar el món”",
     "titleSection": "Servicios",
-    "textSection": "El juego es una actividad muy seria para los más pequeños de la casa: de forma libre, espontánea o dinamizado los adultos, en el comedor de casa o en medio del medio natural, etc. Con el juego nos divertimos y aprendemos juntos, pero cuáles son los secretos que se esconden detrás de cada juego y juguete."
+    "textSection": "El juego es una actividad muy seria para los más pequeños de la casa: de forma libre, espontánea o dinamizado los adultos, en el comedor de casa o en medio del medio natural, etc. Con el juego nos divertimos y aprendemos juntos, pero cuáles son los secretos que se esconden detrás de cada juego y juguete.",
+    "title-services-talks": "CHARLAS PARA FAMILIAS",
+    "title-services-education": "FORMACIONES PROFESIONALES EDUCACIÓN",
+    "title-services-bissnes": "LA FORMACIÓN BONIFICADA POR EMPRESAS",
+    "title-1": "Quieres saber más",
+    "title-2": "Algunos de mis clientes"
   },
   "about": {
     "pathUrl": "Sobre mi",
