--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -2,7 +2,7 @@
   "home": {
     "pathUrl": "Inicio",
     "textHeader": "Pedagogia en movimiento",
-    "cite": "“La educació no canvia el món; canvia a les persones que van a canviar el món”",
+    "cite": "“Todos los adultos fueron alguna vez niños... pero sólo unos pocos lo recuerdan”",
     "titleSection": "Servicios",
     "textSection": "El juego es una actividad muy seria para los más pequeños de la casa: de forma libre, espontánea o dinamizado los adultos, en el comedor de casa o en medio del medio natural, etc. Con el juego nos divertimos y aprendemos juntos, pero cuáles son los secretos que se esconden detrás de cada juego y juguete.",
     "title-services-talks": "CHARLAS PARA FAMILIAS",
